<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_arka_plan"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SoruAlani"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/A"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/Cevaplar" />

            <RadioButton
                android:id="@+id/B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cevaplar" />

            <RadioButton
                android:id="@+id/C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cevaplar" />

            <RadioButton
                android:id="@+id/D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cevaplar" />

            <RadioButton
                android:id="@+id/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cevaplar" />
        </RadioGroup>

        

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left" >

        </TableRow>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sonraki" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AnaMenu" />

    </TableLayout>

</RelativeLayout>